hphp/test/quick/alias_torture.php.expectf
Fatal error: $GLOBALS access requires a subscript. in %s/alias_torture.php on line 6
